# igakit

./: meson.build  pyproject.toml  setup.py
igakit/: igalib-f2pywrappers2.f90  meson.build
test/: bootstrap.py
